# MLflow-with-GCP

./: .gitignore  Makefile  conda.yaml  docker-compose.yaml  inference_demo.py  model_registry.py  pyproject.toml
.envs/: .gcp-example  .tracking-server-example
config/: config_schema.py  model_schema.py
docker/: Dockerfile
docker/scripts/: run-server.sh
scripts/: create-server.sh  startup-script.sh
utils/: data.py  figure.py
